# sicm-scrapper

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  ESTRUCTURA_PROYECTO.md  EXPLICACION.md  LICENSE  OPTIMIZATION_GUIDE.md  README.md  SETUP_RÁPIDO.md  START_HERE.md  SUMMARY.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/: __init__.py  anti_block.py  cli.py  config.py  db.py  fingerprint.py  health.py  logger.py  main.py  metrics.py  models.py  orchestrator.py  parser.py  rate_limiter.py  spider.py
tests/: conftest.py  test_db.py  test_metrics.py  test_models.py  test_parser.py  test_rate_limiter.py
